[package]
name = "renderer-process"
version = "0.1.0"
authors = ["Victor Porof <victor.porof@gmail.com>"]

[features]
default = [
  "rsx-primitives/json-display-list-types",
  "rsx-primitives/webrender-display-list",
  "rsx-native-renderer/enabled"
]

[profile.dev]
codegen-units = 4

[profile.release]
opt-level = 3
lto = true

[dependencies]
lazy_static = "1.0.0"
rsx-native-renderer = { git = "https://github.com/victorporof/rsx-renderers.git", default-features = false }
rsx-primitives = { git = "https://github.com/victorporof/rsx-primitives.git", default-features = false }
serde = "1.0.27"
serde_json = "1.0.9"
ws = "0.7.6"
